erDiagram
    User ||--o{ Appointment : "đặt lịch"
    User ||--o{ Question : "đặt câu hỏi"
    User ||--o{ MedicalRecord : "khám bệnh"
    User }o--|| UserGroup : "thuộc nhóm"
    User ||--o{ Credential : "xác thực"
    Doctor ||--o{ DoctorSchedule : "có lịch trực"
    Doctor ||--o{ MedicalRecord : "lập hồ sơ"
    Doctor ||--o{ Answer : "trả lời"
    Doctor }o--|| Department : "thuộc khoa"
    Department ||--o{ Appointment : "tiếp nhận"
    Department ||--o{ AppointmentQuota : "có quota"
    Appointment ||--o| MedicalRecord : "phát sinh hồ sơ"
    MedicalRecord ||--o{ Prescription : "có đơn thuốc"
    Question ||--o| Answer : "được trả lời"

    User {
        Guid id PK
        string user_name UK
        string full_name
        string phone
        string email
        string password_hash
        Guid group_id FK
        bool must_change_password
    }
    UserGroup {
        Guid id PK
        string code "ADMIN/DOCTOR/RECEPTION/MEMBER"
        string name_l
    }
    Doctor {
        Guid id PK
        string name_l
        string specially_l
        Guid department_id FK
        string image_path
    }
    Department {
        Guid id PK
        string name_l
        string alias UK
        int ord
        bool active_flag
    }
    DoctorSchedule {
        Guid id PK
        Guid doctor_id FK
        DateTime work_date
        string session "morning/afternoon"
        string room
    }
    Appointment {
        Guid id PK
        string patient_name
        string patient_phone
        string patient_email
        Guid department_id FK
        DateTime appointment_date
        string session
        string status "pending/confirmed/rescheduled/rejected/cancelled/completed"
        string booking_code "FK->MedicalRecord"
        string staff_note "lý do từ chối/đổi lịch"
        bool checked_in
        Guid created_by_user_id FK
    }
    AppointmentQuota {
        Guid id PK
        Guid department_id FK
        DateTime work_date
        string session
        int max_count
        int booked_count
    }
    MedicalRecord {
        Guid id PK
        string record_no UK "HSyymmddNNNN"
        Guid patient_user_id FK
        Guid doctor_id FK
        DateTime visit_date
        string diagnosis
        string symptoms
        string treatment
    }
    Prescription {
        Guid id PK
        Guid medical_record_id FK
        string drug_name
        string dosage
        string usage_note
    }
    Question {
        Guid id PK
        Guid patient_user_id FK
        string title
        string body
        string topic
        bool is_public
        bool approved
    }
    Answer {
        Guid id PK
        Guid question_id FK
        Guid doctor_id FK
        string body
        DateTime answered_date
    }
    Credential {
        Guid id PK
        Guid user_id FK
        string role_code
    }
